--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>ECKClient</groupId>
   <artifactId>ECKClient</artifactId>
-  <version>0.2-SNAPSHOT</version>
+  <version>0.1-SNAPSHOT</version>
   <name>ECKClient</name>
   <description>Client library to support the ECK modules</description>
   <build>
@@ -85,6 +85,7 @@
   		<version>2.4</version>
   	</dependency>
   </dependencies>
+  
   <repositories>
     <repository>
       <id>k-int</id>
@@ -103,9 +104,23 @@
       </releases>
     </repository>
   </repositories>
+  
   <scm>
     <connection>scm:git:git://github.com/k-int/ECKClient.git</connection>
     <developerConnection>scm:git:https://github.com/k-int/ECKClient.git</developerConnection>
     <url>https://github.com/k-int/ECKClient</url>
   </scm>
+  
+  <distributionManagement>
+    <repository>
+      <id>k-int-releases</id>
+      <name>Knowledge Intergation Maven2 Repository</name>
+      <url>http://projects.k-int.com:8081/nexus-webapp-1.4.0/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>k-int-snapshots</id>
+      <name>Knowledge Intergation Maven2 Snapshot Repository</name>
+      <url>http://projects.k-int.com:8081/nexus-webapp-1.4.0/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
