--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
   	<dependency>
   		<groupId>com.fasterxml.jackson.core</groupId>
   		<artifactId>jackson-databind</artifactId>
-  		<version>2.2.1</version>
+  		<version>2.2.3</version>
   	</dependency>
   	<dependency>
   		<groupId>commons-logging</groupId>
@@ -77,12 +77,17 @@
   	<dependency>
   		<groupId>com.fasterxml.jackson.core</groupId>
   		<artifactId>jackson-annotations</artifactId>
-  		<version>2.2.1</version>
+  		<version>2.2.3</version>
   	</dependency>
   	<dependency>
   		<groupId>commons-io</groupId>
   		<artifactId>commons-io</artifactId>
   		<version>2.4</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.fasterxml.jackson.dataformat</groupId>
+  		<artifactId>jackson-dataformat-xml</artifactId>
+  		<version>2.2.3</version>
   	</dependency>
   </dependencies>
   
