--- a/pom.xml
+++ b/pom.xml
@@ -89,11 +89,25 @@
   		<artifactId>jackson-dataformat-xml</artifactId>
   		<version>2.2.3</version>
   	</dependency>
-    <dependency>
-        <groupId>org.swordapp</groupId>
-        <artifactId>sword-common</artifactId>
-        <version>1.2-SNAPSHOT</version>
-    </dependency>
+  	<dependency>
+  		<groupId>sword</groupId>
+  		<artifactId>sword-common</artifactId>
+  		<version>1.3</version>
+		<exclusions>
+			<exclusion>
+				<groupId>org.jdesktop</groupId>
+				<artifactId>swing-worker</artifactId>
+			</exclusion>
+			<exclusion>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+			</exclusion>
+			<exclusion>
+				<groupId>javax.servlet</groupId>
+				<artifactId>servlet-api</artifactId>
+			</exclusion>        
+		</exclusions>
+  	</dependency>
   </dependencies>
   
   <repositories>
