--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
 			</exclusion>        
 		</exclusions>
   	</dependency>
+  	<dependency>
+  		<groupId>org.codehaus.woodstox</groupId>
+  		<artifactId>woodstox-core-asl</artifactId>
+  		<version>4.2.0</version>
+  	</dependency>
   </dependencies>
   
   <repositories>
