--- a/pom.xml
+++ b/pom.xml
@@ -1,155 +1,170 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.k-int.EUInside</groupId>
-  <artifactId>ECKClient</artifactId>
-  <version>0.2-SNAPSHOT</version>
-  <name>ECKClient</name>
-  <description>Client library to support the ECK modules</description>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.0</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.9</version>
-        <configuration>
-          <encoding>UTF-8</encoding>
-          <links>
-          	<link>http://hc.apache.org/httpcomponents-client-ga/httpclient/apidocs</link>
-			<link>http://hc.apache.org/httpcomponents-client-ga/httpmime/apidocs</link>
-			<link>http://hc.apache.org/httpcomponents-core-ga/httpcore/apidocs</link>
-			<link>http://docs.oracle.com/javase/7/docs/api</link>
-			<link>http://docs.oracle.com/javaee/6/api</link>
-          </links>
-          <nohelp>true</nohelp>
-          <overview>src/overview.html</overview>
-          <show>public</show>
-		  <source>1.7</source>
-		  <sourcepath>src</sourcepath>
-		  <splitindex>true</splitindex>
-          <stylesheetfile>src/javadocStylesheet.css</stylesheetfile>
-		  <subpackages>com.k_int.euinside.client</subpackages>
-		  <use>true</use>
-		  <version>true</version>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.fasterxml.jackson.core</groupId>
-  		<artifactId>jackson-databind</artifactId>
-  		<version>2.2.3</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>commons-logging</groupId>
-  		<artifactId>commons-logging</artifactId>
-  		<version>1.1.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>log4j</groupId>
-  		<artifactId>log4j</artifactId>
-  		<version>1.2.17</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.httpcomponents</groupId>
-  		<artifactId>httpclient</artifactId>
-  		<version>4.2.5</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.httpcomponents</groupId>
-  		<artifactId>httpmime</artifactId>
-  		<version>4.2.1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>javax.servlet</groupId>
-  		<artifactId>servlet-api</artifactId>
-  		<version>2.5</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.fasterxml.jackson.core</groupId>
-  		<artifactId>jackson-annotations</artifactId>
-  		<version>2.2.3</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>commons-io</groupId>
-  		<artifactId>commons-io</artifactId>
-  		<version>2.4</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.fasterxml.jackson.dataformat</groupId>
-  		<artifactId>jackson-dataformat-xml</artifactId>
-  		<version>2.2.3</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>sword</groupId>
-  		<artifactId>sword-common</artifactId>
-  		<version>1.3</version>
-		<exclusions>
-			<exclusion>
-				<groupId>org.jdesktop</groupId>
-				<artifactId>swing-worker</artifactId>
-			</exclusion>
-			<exclusion>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-			</exclusion>
-			<exclusion>
-				<groupId>javax.servlet</groupId>
-				<artifactId>servlet-api</artifactId>
-			</exclusion>        
-		</exclusions>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.codehaus.woodstox</groupId>
-  		<artifactId>woodstox-core-asl</artifactId>
-  		<version>4.2.0</version>
-  	</dependency>
-  </dependencies>
-  
-  <repositories>
-    <repository>
-      <id>k-int</id>
-      <name>k-int Development Repository</name>
-      <url>http://developer.k-int.com/maven2/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-    </repository>
-    <repository>
-      <id>k-int-release-repo</id>
-      <name>k-int Releases Repositoy</name>
-      <url>http://developer.k-int.com/nexus-webapp-1.4.0/content/repositories/releases/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-    </repository>
-  </repositories>
-  
-  <scm>
-    <connection>scm:git:git://github.com/k-int/ECKClient.git</connection>
-    <developerConnection>scm:git:https://github.com/k-int/ECKClient.git</developerConnection>
-    <url>https://github.com/k-int/ECKClient</url>
-  </scm>
-  
-  <distributionManagement>
-    <repository>
-      <id>k-int-releases</id>
-      <name>Knowledge Intergation Maven2 Repository</name>
-      <url>http://projects.k-int.com:8081/nexus-webapp-1.4.0/content/repositories/releases</url>
-    </repository>
-    <snapshotRepository>
-      <id>k-int-snapshots</id>
-      <name>Knowledge Intergation Maven2 Snapshot Repository</name>
-      <url>http://projects.k-int.com:8081/nexus-webapp-1.4.0/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.k-int.EUInside</groupId>
+	<artifactId>ECKClient</artifactId>
+	<version>0.2-SNAPSHOT</version>
+	<name>ECKClient</name>
+	<description>Client library to support the ECK modules</description>
+	
+	<scm>
+		<connection>scm:git:git://github.com/k-int/ECKClient.git</connection>
+		<developerConnection>scm:git:https://github.com/k-int/ECKClient.git</developerConnection>
+		<url>https://github.com/k-int/ECKClient</url>
+	</scm>
+
+	<distributionManagement>
+		<repository>
+			<id>k-int-releases</id>
+			<name>Knowledge Intergation Maven2 Repository</name>
+			<url>http://projects.k-int.com:8081/nexus-webapp-1.4.0/content/repositories/releases/</url>
+		</repository>
+
+		<snapshotRepository>
+			<id>k-int-snapshots</id>
+			<name>Knowledge Intergation Maven2 Snapshot Repository</name>
+			<url>http://projects.k-int.com:8081/nexus-webapp-1.4.0/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+
+	<repositories>
+		<repository>
+			<id>k-int</id>
+			<name>k-int Development Repository</name>
+			<url>http://developer.k-int.com/maven2/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+
+		<repository>
+			<id>k-int-release-repo</id>
+			<name>k-int Releases Repositoy</name>
+			<url>http://developer.k-int.com/nexus-webapp-1.4.0/content/repositories/releases/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+	</repositories>
+
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.2</version>
+				<configuration>
+					<allowTimestampedSnapshots>true</allowTimestampedSnapshots>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<links>
+						<link>http://hc.apache.org/httpcomponents-client-ga/httpclient/apidocs</link>
+						<link>http://hc.apache.org/httpcomponents-client-ga/httpmime/apidocs</link>
+						<link>http://hc.apache.org/httpcomponents-core-ga/httpcore/apidocs</link>
+						<link>http://docs.oracle.com/javase/7/docs/api</link>
+						<link>http://docs.oracle.com/javaee/6/api</link>
+					</links>
+					<nohelp>true</nohelp>
+					<overview>src/overview.html</overview>
+					<show>public</show>
+					<source>1.7</source>
+					<sourcepath>src</sourcepath>
+					<splitindex>true</splitindex>
+					<stylesheetfile>src/javadocStylesheet.css</stylesheetfile>
+					<subpackages>com.k_int.euinside.client</subpackages>
+					<use>true</use>
+					<version>true</version>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>4.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>sword</groupId>
+			<artifactId>sword-common</artifactId>
+			<version>1.3</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jdesktop</groupId>
+					<artifactId>swing-worker</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+				</exclusion>        
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.woodstox</groupId>
+			<artifactId>woodstox-core-asl</artifactId>
+			<version>4.2.0</version>
+		</dependency>
+	</dependencies>
+
 </project>
