--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.k-int.EUInside</groupId>
 	<artifactId>ECKClient</artifactId>
-	<version>0.2-SNAPSHOT</version>
+	<version>0.2</version>
 	<name>ECKClient</name>
 	<description>Client library to support the ECK modules</description>
 	
@@ -10,7 +10,8 @@
 		<connection>scm:git:git://github.com/k-int/ECKClient.git</connection>
 		<developerConnection>scm:git:https://github.com/k-int/ECKClient.git</developerConnection>
 		<url>https://github.com/k-int/ECKClient</url>
-	</scm>
+	  <tag>ECKClient-0.2</tag>
+  </scm>
 
 	<distributionManagement>
 		<repository>
