--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,18 @@
 	<version>0.3-SNAPSHOT</version>
 	<name>ECKClient</name>
 	<description>Client library to support the ECK modules</description>
-	
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
 	<scm>
 		<connection>scm:git:git://github.com/k-int/ECKClient.git</connection>
 		<developerConnection>scm:git:https://github.com/k-int/ECKClient.git</developerConnection>
 		<url>https://github.com/k-int/ECKClient</url>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 
 	<distributionManagement>
 		<repository>
