--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 
 	<repositories>
 		<repository>
+			<id>k-int-public</id>
+			<name>k-int public</name>
+			<url>http://maven.k-int.com/content/groups/public</url>
+		</repository>
+
+		<repository>
 			<id>k-int-release-repo</id>
 			<name>k-int Releases Repositoy</name>
 			<url>http://nexus.k-int.com/content/repositories/releases/</url>
@@ -50,8 +56,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.0</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
@@ -80,7 +86,7 @@
 					<nohelp>true</nohelp>
 					<overview>src/overview.html</overview>
 					<show>public</show>
-					<source>1.7</source>
+					<source>1.8</source>
 					<sourcepath>src</sourcepath>
 					<splitindex>true</splitindex>
 					<stylesheetfile>src/javadocStylesheet.css</stylesheetfile>
@@ -89,15 +95,23 @@
 					<version>true</version>
 				</configuration>
 			</plugin>
+
+	        <plugin>
+	            <groupId>external.atlassian.jgitflow</groupId>
+	            <artifactId>jgitflow-maven-plugin</artifactId>
+	            <version>1.0-m5.1</version>
+	            <configuration>
+	                <!-- see goals wiki page for configuration options -->
+	                <username>releasebuilder</username>
+      				<password>BlackAndWhite</password>
+      				<!--  Allow snapshots while we are dealing with metis snapshot builds -->
+      				<allowSnapshots>true</allowSnapshots>
+	            </configuration>
+	        </plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.2.3</version>
-		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
@@ -111,19 +125,14 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.2.5</version>
+			<version>4.5.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
-			<version>4.2.1</version>
+			<version>4.5.2</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-			<version>2.2.3</version>
-		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -132,7 +141,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
-			<version>2.2.3</version>
+			<version>2.6.5</version>
 		</dependency>
 		<dependency>
 			<groupId>sword</groupId>
@@ -157,6 +166,16 @@
 			<groupId>org.codehaus.woodstox</groupId>
 			<artifactId>woodstox-core-asl</artifactId>
 			<version>4.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.europeana.metis</groupId>
+			<artifactId>validation-client</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.europeana.metis</groupId>
+			<artifactId>metis-preview-client</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
