--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 					<subpackages>com.k_int.euinside.client</subpackages>
 					<use>true</use>
 					<version>true</version>
-					<additionalJOptions>-Xdoclint:none</additionalJOptions>
+					<additionalJOption>-Xdoclint:none</additionalJOption>
 				</configuration>
 			</plugin>
 
