--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.k-int.EUInside</groupId>
 	<artifactId>ECKClient</artifactId>
-	<version>0.6-SNAPSHOT</version>
+	<version>0.5</version>
 	<name>ECKClient</name>
 	<description>Client library to support the ECK modules</description>
 
