--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,8 @@
 			<artifactId>woodstox-core-asl</artifactId>
 			<version>4.2.0</version>
 		</dependency>
+<!-- Pulls in far to much rubbish
+
 		<dependency>
 			<groupId>eu.europeana.metis</groupId>
 			<artifactId>validation-client</artifactId>
@@ -178,6 +180,6 @@
 			<artifactId>metis-preview-client</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+-->
 	</dependencies>
-
 </project>
