--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,22 @@
 
 		<repository>
 			<id>k-int-release-repo</id>
-			<name>k-int Releases Repositoy</name>
+			<name>k-int Releases Repository</name>
 			<url>http://nexus.k-int.com/content/repositories/releases/</url>
 			<releases>
 				<enabled>true</enabled>
+			</releases>
+		</repository>
+
+		<repository>
+			<id>europeane-snapshot-repo</id>
+			<name>Europeana Snapshots Repository</name>
+			<url>http://artifactory.eanadev.org/artifactory/libs-snapshot-local/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
 			</releases>
 		</repository>
 	</repositories>
@@ -175,12 +187,10 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
-<!-- Pulls in far to much rubbish
 		<dependency>
 			<groupId>eu.europeana.metis</groupId>
 			<artifactId>metis-preview-client</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
--->
 	</dependencies>
 </project>
