--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,18 @@
 				<enabled>true</enabled>
 			</releases>
 		</repository>
+
+		<repository>
+			<id>europeane-snapshot-repo</id>
+			<name>Europeana Snapshots Repository</name>
+			<url>http://artifactory.eanadev.org/artifactory/libs-snapshot-local/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
 	</repositories>
 
 	<build>
